# HW_lesson__22

./: .gitignore  README.md  blog_fixture.json  catalog_fixture.json  groups.json  groups_fixture.json  pyproject.toml  users_fixture.json
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogarticle_number_views.py  0003_alter_blogarticle_number_views.py  0004_alter_blogarticle_options_and_more.py  0005_alter_blogarticle_options.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_product_picture.py  0003_contact_alter_product_options.py  0004_alter_product_name_p.py  0005_alter_product_name_p.py  0006_alter_product_picture.py  0007_product_hit_sales.py  0008_alter_product_category.py  0009_alter_product_price_by.py  0010_alter_product_picture_alter_product_price_by.py  0011_alter_product_picture.py  0012_alter_product_picture.py  0013_alter_product_picture.py  0014_alter_product_options_product_published.py  0015_product_owner.py  0016_alter_product_options_alter_product_owner.py
catalog/templates/: added_product.html  adding_product.html  base.html  contacts.html  editing_product.html  error_403.html  filter_menu.html  footer.html  header.html  help_forbidden_words.html  home.html  main_menu.html  nav_pagination.html  product.html  product_detail.html  products_confirm_delete.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  (+8 more)
(+22 files in other folders)
