[tool.poetry]
name = "hw-lesson-22"
version = "0.1.0"
description = ""
authors = ["Dmitrii Kovkov <dmitrii.s.kovkov@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
ipython = "^8.31.0"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
